src/test/ui/nll/do-not-ignore-lifetime-bounds-in-copy.stderr
error[E0597]: `s` does not live long enough
  --> $DIR/do-not-ignore-lifetime-bounds-in-copy.rs:10:17
   |
LL |     let a = Foo(&s);
   |                 ^^ borrowed value does not live long enough
LL |     drop(a);
   |          - copying this value requires that `s` is borrowed for `'static`
LL |     drop(a);
LL | }
   | - `s` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
